testsuite/tests/properties/invalid_rebindings/old_env.lkt
import common

class Example: FooNode {
    fun p(): Int = null[FooNode].old_env
}
